--- a/ToDoey/Base.lproj/Main.storyboard
+++ b/ToDoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="myY-Xu-HZP" id="lNg-Cb-Vku"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="ToDoey" id="TfF-ed-Ghw"/>
+                    <navigationItem key="navigationItem" title="ToDoey" id="TfF-ed-Ghw">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="hdH-tr-Bji">
+                            <color key="tintColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="myY-Xu-HZP" id="VLP-VP-ymh"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dke-t9-PkA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
